k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80        # البورت اللي الـ Frontend هينادي عليه
    targetPort: 3000 # بورت الـ Container الحقيقي
