k8s/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None # دي اللي بتخليه Headless Service زي الرسمة
  ports:
  - port: 5432
  selector:
    app: postgres
